--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -159,7 +159,7 @@
 	     <div class="modal-dialog">
 	     	<form name="saveAskModalForm" ng-submit="askModalObj.askModalSave()" novalidate>
 	         <div class="modal-content">
-	         	<div class="modal-header">
+	         	<div class="modal-header" style="cursor: move;">
 	                <button type="button" class="close" ng-click="dismissModalAsk()" aria-hidden="true">&times;</button>
 	                <h4 class="modal-title">บันทึกผลการติดตาม</h4>
 	            </div>
