--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -49,11 +49,11 @@
 <div class="row">
 	<div class="col-xs-12">
 		<div style="background-color: #356190; margin-bottom: 1px; height: 238px; overflow-y: auto;" class="comm-rcorners-1" ng-repeat="detail in taskDetail">
-			<div ng-repeat="f in fieldName" class="col-xs-3" style="font-size: 13px; padding: 0; color: #E1E2E3; background-color: {{ f.colorBg }};">
+			<div ng-repeat="f in fieldName" class="col-xs-3" style="font-size: 13px; padding: 0; color: #E1E2E3;">
 				<div class="col-xs-5" style="text-align: right; margin: 0; min-height: 38px; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word;">
 					<span>{{ f.columnNameAlias || f.columnName }}: </span>
 				</div>
-				<div class="col-xs-7" style="padding: 1px 0 0 0; border-top: 1px solid #234E7C; background-color: {{ f.colorBg || '#356190' }};"
+				<div class="col-xs-7" style="padding: 1px 0 0 0; border-top: 1px solid #234E7C;"
 					 ng-style="(f.isNotice && !isDisableNoticePrintBtn) ? {'cursor': 'pointer'} : {}" ng-click="(f.isNotice && !isDisableNoticePrintBtn && !isEditMode) ? noticeMenu(detail[f.columnName+'_hide'] || detail[f.columnName], f.noticeForms, detail[f.noticeCusColName]) : ''">
 					 
 					 <span ng-show="group1 && isEditMode">
@@ -75,7 +75,8 @@
 						 	f.dataType == 'sys_owner' ? detail[f.columnName][0].showname : ''
 						 }}
 					 </span>
-					 <span ng-show="!isEditMode" style="color: {{ f.colorFont }};">
+					 <span ng-show="!isEditMode" ng-class="{label: f.colorBg}" 
+					       ng-style="f.colorBg ? {'color': f.colorFont, 'background-color': f.colorBg, 'font-size': '13px'} : f.colorFont ? {'color': f.colorFont} : '' ">
 					   {{ 
 						   f.dataType == 'sys_owner' ? detail[f.columnName][0].showname :
 						   f.dataType == 'date' ? (detail[f.columnName] | date:gb_dateFormat) : 
