--- a/backend/src/main/webapp/app/views/import_others/import_others_conf.html
+++ b/backend/src/main/webapp/app/views/import_others/import_others_conf.html
@@ -65,6 +65,8 @@
 								                    <i class="fa fa-bars" style="cursor: pointer;" title="เลือกแบบฟอร์ม Notice" ng-click="noticeList(item)"></i>
 								                    <br />
 								                    
+								                    <a href="#" e-class="form-control input-sm" title="Data Type" e-placeholder="Data Type" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
+			                       					   editable-text="item.dataType"><small>{{ item.dataType }}</small></a><br />
 								                    
 								                    <a href="#" e-class="form-control input-sm" e-placeholder="Column Name" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
 								                       editable-text="item.columnName"><small>{{ item.columnName }}</small></a><br />
