--- a/backend/src/main/webapp/app/views/product/import_payment_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_payment_conf.html
@@ -35,6 +35,10 @@
 			                    <input class="pull-left" title="Sorting" name="sorting" type="radio" ng-model="$parent.$parent.$parent.sortingColumnName" ng-change="updateColumnName('sorting')" ng-value="item.columnName">
 			                    <input class="pull-left" title="sum" type="checkbox" ng-model="item.isSum" ng-change="update(item)">
 			                    <br />
+			                    
+			                    <a href="#" e-class="form-control input-sm" title="Data Type" e-placeholder="Data Type" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
+			                       editable-text="item.dataType"><small>{{ item.dataType }}</small></a><br />
+			                       
 			                    <a href="#" e-class="form-control" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
 			                       editable-text="item.columnName"><small>{{ item.columnName }}</small></a><br />
 			                       
