--- a/backend/src/main/webapp/app/views/tools/main.html
+++ b/backend/src/main/webapp/app/views/tools/main.html
@@ -27,6 +27,7 @@
                 		<div class="row">
 	        
 					        <tools-menu comments="Excel to Text" colour="red" type="random" goto="dashboard.tools.excel2text" desc="แปลง excel file เป็น text file"></tools-menu>
+					        <!-- <tools-menu comments="Pdf to Image" colour="red" type="random" goto="dashboard.tools.excel2text" desc="แปลง pdf file เป็น image file"></tools-menu> -->
 					
 					    </div>
                 	</div>
