--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -304,7 +304,7 @@
 	            </div>
 	           	<div class="modal-footer">
 					<button type="button" class="btn btn-default" ng-click="dismissModalAsk()">ปิด</button>
-					<button type="submit" class="btn btn-primary" ng-disabled="!askModalObj.trace.resultText">บันทึก</button>
+					<button type="submit" class="btn btn-primary" ng-disabled="!askModalObj.trace.resultText || isOutOfWorkingTime">บันทึก</button>
 				</div>
 	         </div>
 	         </form>
