--- a/backend/src/main/webapp/app/views/tools/fileConvert.html
+++ b/backend/src/main/webapp/app/views/tools/fileConvert.html
@@ -49,7 +49,7 @@
            </div>
            <div class="row">
 	            <div class="col-lg-12">
-	            	<input type="file" class="form-control pull-right" style="width: 300px;" nv-file-select="" uploader="uploader" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />	  
+	            	<input type="file" class="form-control pull-right" style="width: 300px;" nv-file-select="" uploader="uploader" />	  
 	            </div>
             </div>
          </div>
