--- a/backend/src/main/webapp/app/views/import_others/import_others_conf.html
+++ b/backend/src/main/webapp/app/views/import_others/import_others_conf.html
@@ -68,13 +68,13 @@
 								                    <a href="#" e-class="form-control input-sm" title="Data Type" e-placeholder="Data Type" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
 			                       					   editable-text="item.dataType"><small>{{ item.dataType }}</small></a><br />
 								                    
-								                    <a href="#" e-class="form-control input-sm" e-placeholder="Column Name" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
+								                    <a href="#" e-class="form-control input-sm" title="Column Name" e-placeholder="Column Name" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
 								                       editable-text="item.columnName"><small>{{ item.columnName }}</small></a><br />
 								                       
-								                    <a href="#" e-class="form-control input-sm" e-placeholder="Alias Name" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
+								                    <a href="#" e-class="form-control input-sm" title="Alias Name" e-placeholder="Alias Name" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
 								                       editable-text="item.columnNameAlias"><small>{{ item.columnNameAlias || '-' }}</small></a><br />
 			                       
-													<a href="#" e-class="form-control input-sm" e-placeholder="Colum Name ที่ออก notice" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
+													<a href="#" e-class="form-control input-sm" title="Colum Name ที่ออก notice" e-placeholder="Colum Name ที่ออก notice" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
 								                       editable-text="item.noticeCusColName"><small>{{ item.noticeCusColName || '-' }}</small></a>
 								                       
 								                </li>
