--- a/backend/src/main/webapp/app/views/dym_list/main.html
+++ b/backend/src/main/webapp/app/views/dym_list/main.html
@@ -24,7 +24,7 @@
 							<li ng-repeat="u in products"><a href="" ng-click="changeProduct(u)">{{ u.productName }}</a></li>
 						</ul>
 					</div>
-					<span class="pull-right" ng-show="group0">{{ product.productName }}&nbsp&nbsp</span>
+					<span class="pull-right" ng-show="group0">{{ workingOnProduct.productName }}&nbsp&nbsp</span>
                 
                     <button type="button" class="btn btn-info btn-circle btn-lg" ng-show="isShowBack"
                     		style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()">
