--- a/backend/src/main/webapp/app/views/notice/main.html
+++ b/backend/src/main/webapp/app/views/notice/main.html
@@ -15,7 +15,7 @@
 				<li ng-repeat="u in products"><a href="" ng-click="changeProduct(u)">{{ u.productName }}</a></li>
 			</ul>			
 		</div>
-		<span class="pull-right" ng-show="group0">{{ product.productName }}&nbsp&nbsp</span>
+		<span class="pull-right" ng-show="group0">{{ workingOnProduct.productName }}&nbsp&nbsp</span>
 	</div>
 	<div class="panel-body" style="padding: 3px;">
 
