--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -22,7 +22,7 @@
 			                </li>
 			            </ul>
 			        </div>
-			        <span class="pull-right" ng-show="group0 || group5">{{ product.productName }}&nbsp&nbsp</span>
+			        <span class="pull-right" ng-show="group0 || group5">{{ workingOnProduct.productName }}&nbsp&nbsp</span>
                 </div>
                 <div class="panel-body" style="padding: 3px;">
                 
