--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -18,7 +18,7 @@
 							<li ng-repeat="u in products"><a href="" ng-click="changeProduct(u)">{{ u.productName }}</a></li>
 						</ul>			
 					</div>
-					<span class="pull-right" ng-show="group0  && !isDetailPage">{{ product.productName }}&nbsp&nbsp</span>
+					<span class="pull-right" ng-show="group0  && !isDetailPage">{{ workingOnProduct.productName }}&nbsp&nbsp</span>
 					<button type="button" class="btn btn-info btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()" ng-show="isDetailPage">
                     	<i class="fa fa-long-arrow-left"></i>
                     </button>
