--- a/backend/src/main/webapp/app/views/dashboard/home.html
+++ b/backend/src/main/webapp/app/views/dashboard/home.html
@@ -3,47 +3,44 @@
         <div class="col-lg-12">
             <h1 class="page-header">Dashboard</h1>
         </div>
-        <!-- /.col-lg-12 -->
     </div>
-    <!-- /.row -->
     <div class="row">
-        
-        <stats number="6" comments="New comments!" colour="primary" type="comments" goto="login"></stats>
-        <stats number="12" comments="New tasks!" colour="primary" type="user" goto="login"></stats>
-        <stats number="18" comments="New orders!" colour="yellow" type="shopping-cart" goto="login"></stats>
-        <stats number="24" comments="Support tickets!" colour="red" type="support" goto="login"></stats>
-
-    </div>
     
-    <!-- /.panel -->
-    <div class="row">
-        <div class="col-lg-8">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <i class="fa fa-clock-o fa-fw"></i> Responsive Timeline
-                </div>
-                <!-- /.panel-heading -->
-                <timeline></timeline>
-                <!-- /.panel-body -->
-            </div>
-            <!-- /.panel -->
-        </div>
-        <!-- /.col-lg-8 -->
-        <div class="col-lg-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <i class="fa fa-bell fa-fw"></i> Notifications Panel
-                </div>
-                <!-- /.panel-heading -->
-                <notifications></notifications> 
-                <!-- /.panel-body -->
-            </div>
-            <!-- /.panel -->
-
-            <chat></chat>
-             <!-- /.panel .chat-panel -->
-        </div>
-        <!-- /.col-lg-4 -->
+    	<div class="col-xs-6">
+	        <div class="panel panel-primary">
+	            <div class="panel-heading">แสดงผลการติดตาม
+	            	<div class="row form-inline" style="margin-bottom: 3px;">
+		            	<div class="col-xs-6 col-xs-offset-3" style="position: absolute; right: 4px; top: 5px;">
+				            <div class="input-group input-daterange">
+							  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+							    <input type="text" name="dateFrom" class="form-control" readonly="readonly" date-parser="dd/MM/yyyy" 
+							    	   ng-model="formData.dateFrom" placeholder="วันที่เริ่มต้น">
+							    <span class="input-group-addon">ถึง</span>
+							    <input type="text" name="dateTo" class="form-control" readonly="readonly" date-parser="dd/MM/yyyy" 
+							    	   ng-model="formData.dateTo" placeholder="วันที่สิ้นสุด">
+							</div>
+						</div>
+					</div>
+	            </div>
+	            <div class="panel-body">
+	                <canvas id="bar" class="chart chart-bar" data="bar.data" labels="bar.labels" series="bar.series" options="bar.options"></canvas>
+	            </div>
+	        </div>
+	    </div>
+	    
+	    
+	    
+	    
+    	<!-- <div class="col-xs-4" id="line-chart">
+	        <div class="panel panel-default">
+	            <div class="panel-heading">Line Chart</div>
+	            <div class="panel-body">
+	                <canvas id="line" class="chart chart-line chart-xl" data="line.data" labels="line.labels" legend="true"
+	                click="line.onClick" series="line.series"></canvas>
+	            </div>
+	        </div>
+	    </div> -->
+	    
+	
     </div>
-    <!-- /.row -->
 </div>
