--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -40,9 +40,11 @@ fieldset {
                 <div class="panel-body">
                 	<div class="form-horizontal">
                 	
-                		<div class="form-group">
+                		<div class="form-group" ng-show="group0">
 							<label class="control-label col-lg-3" style="color: #337AB7;">Comp Code: </label>
-							<div class="col-lg-4"><span class="form-control">{{ productKey }}</span></div>
+							<div class="col-lg-6">
+								<a href="" class="form-control no-border" e-class="form-control" e-style="width: 100%; margin-left: 15px;" buttons="no" onaftersave="update()" editable-text="$parent.productKey">{{ $parent.productKey || 'คลิกเพื่อแก้ใข' }}</a>
+							</div>
 						</div>
 						
 						<div class="form-group">
@@ -59,12 +61,12 @@ fieldset {
 							</div>
 						</div>
 				
-						<div class="form-group" ng-show="group0">
+						<!-- <div class="form-group" ng-show="group0">
 							<label class="control-label col-lg-3" style="color: #337AB7;">License: </label>
 							<div class="col-lg-6">
 								<a href="" class="form-control no-border" e-class="form-control" e-style="width: 100%; margin-left: 15px;" buttons="no" onaftersave="update()" editable-textarea="license" e-rows="15"></a>
 							</div>
-						</div>
+						</div> -->
 						
 						<fieldset style="margin-top: 15px;" ng-show="group0"> <legend style="color: #337AB7;">Database backup configuration</legend>
 							<div class="form-group">
