--- a/backend/src/main/webapp/app/views/dashboard/home.html
+++ b/backend/src/main/webapp/app/views/dashboard/home.html
@@ -23,10 +23,19 @@
 					</div>
 	            </div>
 	            <div class="panel-body">
-	                <canvas id="bar" class="chart chart-bar" data="bar.data" labels="bar.labels" series="bar.series" options="bar.options"></canvas>
+	                <canvas id="bar" class="chart chart-bar" 
+	                		chart-data="bar.data" 
+	                		chart-labels="bar.labels" 
+	                		chart-series="bar.series" 
+	                		chart-options="bar.options"
+	                		chart-colors="colors"></canvas>
 	            </div>
 	        </div>
 	    </div>
+	    
+	    
+	    
+	    
 	    
 	    
 	    
