--- a/backend/src/main/webapp/app/views/dashboard/home.html
+++ b/backend/src/main/webapp/app/views/dashboard/home.html
@@ -9,15 +9,15 @@
     	<div class="col-xs-6">
 	        <div class="panel panel-primary">
 	            <div class="panel-heading">แสดงผลการติดตาม
-	            	<div class="row form-inline" style="margin-bottom: 3px;">
-		            	<div class="col-xs-6 col-xs-offset-3" style="position: absolute; right: 8px; top: 8px;">
+	            	<div class="row form-inline">
+		            	<div class="col-xs-6 col-xs-offset-3" style="position: absolute; right: 6px; top: 6px;">
 				            <div class="input-group">
 							  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 							    <input type="text" id="dateFrom_traceCount" class="form-control input-sm" readonly="readonly" date-parser="dd/MM/yyyy" 
 							    	   ng-model="formData.dateFrom" placeholder="วันที่เริ่มต้น" ng-change="dateFromChange()">
 							    <span class="input-group-addon">ถึง</span>
 							    <input type="text" id="dateTo_traceCount" class="form-control input-sm" readonly="readonly" date-parser="dd/MM/yyyy" 
-							    	   ng-model="formData.dateTo" placeholder="วันที่สิ้นสุด" ng-change="search()">
+							    	   ng-model="formData.dateTo" placeholder="วันที่สิ้นสุด" ng-change="traceCount()">
 							</div>
 						</div>
 					</div>
@@ -33,6 +33,19 @@
 	        </div>
 	    </div>
 	    
+	    <div class="col-xs-6">
+	        <div class="panel panel-primary">
+	            <div class="panel-heading">แสดงผล Payment</div>
+	            <div class="panel-body">
+	                <canvas id="bar2" class="chart chart-bar" 
+	                		chart-data="bar2.data" 
+	                		chart-labels="bar2.labels" 
+	                		chart-series="bar2.series" 
+	                		chart-options="bar2.options"
+	                		chart-colors="colors2"></canvas>
+	            </div>
+	        </div>
+	    </div>
 	    
 	    
 	    
