--- a/backend/src/main/webapp/app/views/product/import_payment_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_payment_conf.html
@@ -33,17 +33,22 @@
 			                    <span class="pull-right"><small>Col. {{$index + 1}}</small></span>
 			                    <input class="pull-left" title="เลขที่สัญญา" name="contractNo" type="radio" ng-model="$parent.$parent.$parent.contractNoColumnName" ng-change="updateColumnName('contactNo')" ng-value="item.columnName">
 			                    <input class="pull-left" title="Sorting" name="sorting" type="radio" ng-model="$parent.$parent.$parent.sortingColumnName" ng-change="updateColumnName('sorting')" ng-value="item.columnName">
+			                    <input class="pull-left" title="Paid Date" name="paidDate" type="radio" ng-model="$parent.$parent.$parent.paidDateColumnName" ng-change="updateColumnName('paidDate')" ng-value="item.columnName">			                    
 			                    <input class="pull-left" title="sum" type="checkbox" ng-model="item.isSum" ng-change="update(item)">
+			                    <input class="pull-left" title="reportSum" type="checkbox" ng-model="item.isReportSum" ng-change="update(item)">
 			                    <br />
 			                    
 			                    <a href="#" e-class="form-control input-sm" title="Data Type" e-placeholder="Data Type" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
-			                       editable-text="item.dataType"><small>{{ item.dataType }}</small></a><br />
+			                       editable-text="item.dataType"><small>{{ item.dataType || '-' }}</small></a><br />
 			                       
 			                    <a href="#" e-class="form-control" title="Column Name" e-placeholder="Column Name" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
-			                       editable-text="item.columnName"><small>{{ item.columnName }}</small></a><br />
+			                       editable-text="item.columnName"><small>{{ item.columnName || '-' }}</small></a><br />
 			                       
 			                    <a href="#" e-class="form-control" title="Alias Name" e-placeholder="Alias Name" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
-			                       editable-text="item.columnNameAlias"><small>{{ item.columnNameAlias || '-' }}</small></a>
+			                       editable-text="item.columnNameAlias"><small>{{ item.columnNameAlias || '-' }}</small></a><br />
+			                       
+		                       	<a href="#" e-class="form-control" title="Report Sum Name" e-placeholder="Report Sum Name" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
+			                       editable-text="item.reportSumName" ng-show="item.isReportSum"><small>{{ item.reportSumName || '-' }}</small></a>
 			                       
 			                </li>
 			            </ul>
